# azure-vault-secrets

./: Cargo.toml  README.md
src/: lib.rs
