[package]
name = "azure_vault_secrets"
version = "0.1.2"
authors = ["Claus Guttesen <kometen@gmail.com>"]
description = "Retrieve secrets from Azure Key Vault"
license = "MIT"
repository = "https://github.com/kometen/azure-vault-secrets"
documentation = "https://github.com/kometen/azure-vault-secrets"
readme = "README.md"
keywords = ["vault", "security"]
categories = ["cryptography"]
edition = "2021"

[dependencies]
anyhow = "1.0"
azure_core = { version = "0.20", features = ["enable_reqwest_rustls"] }
azure_identity = { version = "0.20", default-features = false }
azure_security_keyvault = "0.20.0"
db_config = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
